fix to prevent home image overflow on small screens

--- a/styles/home.css
+++ b/styles/home.css
@@ -102,3 +102,10 @@ main {
         flex-direction: column;
     }
 }
+
+@media (max-width: 700px) {
+    .bloque_inicio img{
+        width: 100%;
+        height: auto;
+    }
+}
